# entomology-bot

./: README.md  pyproject.toml  test.yaml
src/entomology_bot/: __main__.py
