[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entomology-bot"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["praw", "pyyaml"]

[tool.hatch.version]
path = "src/entomology_bot/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/entomology_bot tests}"

[tool.coverage.run]
source_pkgs = ["entomology_bot", "tests"]
branch = true
parallel = true
omit = [
  "src/entomology_bot/__about__.py",
]

[tool.coverage.paths]
entomology_bot = ["src/entomology_bot", "*/entomology-bot/src/entomology_bot"]
tests = ["tests", "*/entomology-bot/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
